objects/Web_Program_Access__c.object
<CustomObject>
    <description>These are the lists of &quot;programs&quot;  that can be accessed by Members on advisory.com website after login.</description>
    <fields>
        <fullName>ABC_Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, ABC Employees will not receive access to this web program.</inlineHelpText>
        <label>ABC Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>A_com_Program_ID__c</fullName>
        <description>The unique ID that links this SF record to the Site Web Program</description>
        <externalId>true</externalId>
        <label>A.com Program Id</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Advisory_com_CS_Role__c</fullName>
        <description>CSRole is for Community Server, which is the discussion forum platform. It is a column in the program table in the adv.com database. It is pulled so that it can be saved in the user’s session cookie so when they go to the discussion forum, Community Server will know which forums they are able to access.</description>
        <label>Site CS Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Code_to_Member__c</fullName>
        <label>Program Code to Member</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Id_Autonumber__c</fullName>
        <displayFormat>{000}</displayFormat>
        <label>Program Id Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Program_Name_to_Member__c</fullName>
        <description>Created for CR-20150105-8438</description>
        <label>Program Name to Member</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Program_ID__c</fullName>
        <description>Displays the historical A.com Program ID value or the Program ID Autonumber value.</description>
        <formula>IF(NOT(ISBLANK(  A_com_Program_ID__c  )), A_com_Program_ID__c ,  VALUE( Program_Id_Autonumber__c ) )</formula>
        <label>Site Program ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Site__c</fullName>
        <description>This field does not drive any functionality. It is for reference purposes only.</description>
        <label>Site</label>
        <picklist>
            <picklistValues>
                <fullName>Advisory.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EAB.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Web Program Access</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Site__c</columns>
        <columns>Program_Code_to_Member__c</columns>
        <columns>Description__c</columns>
        <columns>ABC_Restricted__c</columns>
        <columns>Site_Program_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Web Program Access Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Program Access</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>